Apply linting and formatting

--- a/docs/_static/animation.ipynb
+++ b/docs/_static/animation.ipynb
@@ -249,6 +249,7 @@
     "\n",
     "\n",
     "def plot_stress_and_graph(res_idx, mk_res_list, k_list, m_list, **kwargs):\n",
+    "    \"\"\"Function that plots the animation.\"\"\"\n",
     "    with plotting_context(title=\"Stress\", **kwargs) as (fig, ax):\n",
     "        # plot background\n",
     "        mk_res_list[res_idx].concrete_section.plot_section(\n",
@@ -267,14 +268,14 @@
     "        conc_sig_max = (\n",
     "            max([max(x) for x in mk_res_list[res_idx].concrete_stresses]) + 1e-12\n",
     "        )\n",
-    "        steel_sig_min = min(mk_res_list[res_idx].lumped_reinforcement_stresses)\n",
-    "        steel_sig_max = max(mk_res_list[res_idx].lumped_reinforcement_stresses)\n",
+    "        # steel_sig_min = min(mk_res_list[res_idx].lumped_reinforcement_stresses)\n",
+    "        # steel_sig_max = max(mk_res_list[res_idx].lumped_reinforcement_stresses)\n",
     "\n",
     "        # set up ticks\n",
     "        v_conc = np.linspace(conc_sig_min, conc_sig_max, 15, endpoint=True)\n",
-    "        v_steel = np.linspace(steel_sig_min, steel_sig_max, 15, endpoint=True)\n",
-    "        ticks_conc = v_conc\n",
-    "        ticks_steel = v_steel\n",
+    "        # v_steel = np.linspace(steel_sig_min, steel_sig_max, 15, endpoint=True)\n",
+    "        # ticks_conc = v_conc\n",
+    "        # ticks_steel = v_steel\n",
     "\n",
     "        # plot the concrete stresses\n",
     "        for idx, sig in enumerate(mk_res_list[res_idx].concrete_stresses):\n",
@@ -294,9 +295,7 @@
     "                )\n",
     "\n",
     "                # plot the filled contour\n",
-    "                trictr = ax.tricontourf(\n",
-    "                    triang, sig, v_conc, cmap=cmap_conc, norm=CenteredNorm()\n",
-    "                )\n",
+    "                ax.tricontourf(triang, sig, v_conc, cmap=cmap_conc, norm=CenteredNorm())\n",
     "\n",
     "                # plot a zero stress contour, supressing warning\n",
     "                with warnings.catch_warnings():\n",
@@ -308,13 +307,11 @@
     "                    # set zero stress for neutral axis contour\n",
     "                    zero_level = 0\n",
     "\n",
-    "                    if min(sig) > 0:\n",
-    "                        if min(sig) < 1e-3:\n",
-    "                            zero_level = min(sig) + 1e-12\n",
+    "                    if min(sig) > 0 and min(sig) < 1e-3:\n",
+    "                        zero_level = min(sig) + 1e-12\n",
     "\n",
-    "                    if max(sig) < 0:\n",
-    "                        if max(sig) > -1e-3:\n",
-    "                            zero_level = max(sig) - 1e-12\n",
+    "                    if max(sig) < 0 and max(sig) > -1e-3:\n",
+    "                        zero_level = max(sig) - 1e-12\n",
     "\n",
     "                    if min(sig) == 0:\n",
     "                        zero_level = 1e-12\n",
@@ -322,7 +319,7 @@
     "                    if max(sig) == 0:\n",
     "                        zero_level = -1e-12\n",
     "\n",
-    "                    CS = ax.tricontour(\n",
+    "                    ax.tricontour(\n",
     "                        triang, sig, [zero_level], linewidths=1, linestyles=\"dashed\"\n",
     "                    )\n",
     "\n",
@@ -409,7 +406,6 @@
     "\n",
     "from PIL import Image\n",
     "\n",
-    "\n",
     "# filepaths\n",
     "fp_in = \"anim/*.png\"\n",
     "fp_out = \"anim.gif\"\n",
@@ -444,7 +440,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
