--- a/docs/examples/composite_section.ipynb
+++ b/docs/examples/composite_section.ipynb
@@ -598,12 +598,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\n",
-    "    f\"cx_geom = {conc_sec.moment_centroid[0]:.2f}; cy_geom = {conc_sec.moment_centroid[1]:.2f}\"\n",
-    ")\n",
-    "print(\n",
-    "    f\"cx_gross = {conc_sec.gross_properties.cx_gross:.2f}; cy_gross = {conc_sec.gross_properties.cy_gross:.2f}\"\n",
-    ")"
+    "cx_geom = conc_sec.moment_centroid[0]\n",
+    "cy_geom = conc_sec.moment_centroid[1]\n",
+    "cx_gross = conc_sec.gross_properties.cx_gross\n",
+    "cy_gross = conc_sec.gross_properties.cy_gross\n",
+    "print(f\"cx_geom = {cx_geom:.2f}; cy_geom = {cy_geom:.2f}\")\n",
+    "print(f\"cx_gross = {cx_gross:.2f}; cy_gross = {cy_gross:.2f}\")"
    ]
   },
   {
@@ -716,7 +716,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.7"
   },
   "vscode": {
    "interpreter": {
