--- a/docs/examples/nzs3101.ipynb
+++ b/docs/examples/nzs3101.ipynb
@@ -28,7 +28,6 @@
     ")\n",
     "from concreteproperties.design_codes import NZS3101\n",
     "from concreteproperties.results import (\n",
-    "    BiaxialBendingResults,\n",
     "    MomentCurvatureResults,\n",
     "    MomentInteractionResults,\n",
     ")"
@@ -52,7 +51,7 @@
    "source": [
     "design_code = NZS3101()\n",
     "concrete_40 = design_code.create_concrete_material(compressive_strength=40)\n",
-    "steel_300E = design_code.create_steel_material(steel_grade=\"300E\")"
+    "steel_300e = design_code.create_steel_material(steel_grade=\"300E\")"
    ]
   },
   {
@@ -71,12 +70,10 @@
    "outputs": [],
    "source": [
     "print(concrete_40.name)\n",
-    "print(\n",
-    "    f\"Concrete Flexural Tensile Strength: {concrete_40.flexural_tensile_strength:.2f} MPa\"\n",
-    ")\n",
-    "print(\n",
-    "    f\"Ultimate Compressive Strain: {concrete_40.ultimate_stress_strain_profile.get_ultimate_compressive_strain():.4f}\"\n",
-    ")\n",
+    "ult_flex = concrete_40.flexural_tensile_strength\n",
+    "print(f\"Concrete Flexural Tensile Strength: {ult_flex:.2f} MPa\")\n",
+    "ult_comp = concrete_40.ultimate_stress_strain_profile.get_ultimate_compressive_strain()\n",
+    "print(f\"Ultimate Compressive Strain: {ult_comp:.4f}\")\n",
     "concrete_40.stress_strain_profile.plot_stress_strain(\n",
     "    title=\"Concrete Serviceability Stress-Strain Profile\", fmt=\"-r\"\n",
     ")\n",
@@ -100,13 +97,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(steel_300E.name)\n",
-    "print(f\"Density = {steel_300E.density} kg/m^3\")\n",
-    "print(\n",
-    "    f\"Ultimate Tensile Strain = {steel_300E.stress_strain_profile.get_ultimate_tensile_strain()}\"\n",
-    ")\n",
-    "print(f\"Overstrength Factor = {steel_300E.phi_os}\")\n",
-    "steel_300E.stress_strain_profile.plot_stress_strain(\n",
+    "print(steel_300e.name)\n",
+    "print(f\"Density = {steel_300e.density} kg/m^3\")\n",
+    "ult_strain = steel_300e.stress_strain_profile.get_ultimate_tensile_strain()\n",
+    "print(f\"Ultimate Tensile Strain = {ult_strain}\")\n",
+    "print(f\"Overstrength Factor = {steel_300e.phi_os}\")\n",
+    "steel_300e.stress_strain_profile.plot_stress_strain(\n",
     "    title=\"Steel Stress-Strain Profile\", fmt=\"-r\"\n",
     ")"
    ]
@@ -152,7 +148,7 @@
     "    c_bot=35 + 12,\n",
     "    n_circle=4,\n",
     "    conc_mat=concrete_40,\n",
-    "    steel_mat=steel_300E,\n",
+    "    steel_mat=steel_300e,\n",
     ")\n",
     "\n",
     "conc_sec_beam = ConcreteSection(geom_beam)\n",
@@ -319,7 +315,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "steel_500E = design_code.create_steel_material(steel_grade=\"500E\")"
+    "steel_500e = design_code.create_steel_material(steel_grade=\"500E\")"
    ]
   },
   {
@@ -357,7 +353,7 @@
     "    c_side=35 + 12,\n",
     "    n_circle=4,\n",
     "    conc_mat=concrete_40,\n",
-    "    steel_mat=steel_500E,\n",
+    "    steel_mat=steel_500e,\n",
     ")\n",
     "\n",
     "conc_sec_col = ConcreteSection(geom_col)\n",
@@ -385,23 +381,23 @@
     "M_o_C = 468.97 / 2\n",
     "N_o_C = 1100\n",
     "\n",
-    "f_ult_res_T, _, _ = design_code.ultimate_bending_capacity(\n",
+    "f_ult_res_t, _, _ = design_code.ultimate_bending_capacity(\n",
     "    pphr_class=\"NDPR\", analysis_type=\"cpe_chk\", n_design=N_o_T * 1e3\n",
     ")\n",
     "print(\"Tension case capacity:-\")\n",
-    "print(f\"phi.Mn = {f_ult_res_T.m_x / 1e6:.2f} kN.m at axial load of {N_o_T:.2f} kN\")\n",
+    "print(f\"phi.Mn = {f_ult_res_t.m_x / 1e6:.2f} kN.m at axial load of {N_o_T:.2f} kN\")\n",
     "print(f\"Mo = {M_o_T} kN.m\")\n",
-    "col_ratio_T = M_o_T * 1e6 / f_ult_res_T.m_x\n",
-    "print(f\"Actual design ratio = {abs(col_ratio_T):.3f}\\n\")\n",
+    "col_ratio_t = M_o_T * 1e6 / f_ult_res_t.m_x\n",
+    "print(f\"Actual design ratio = {abs(col_ratio_t):.3f}\\n\")\n",
     "\n",
-    "f_ult_res_C, _, _ = design_code.ultimate_bending_capacity(\n",
+    "f_ult_res_c, _, _ = design_code.ultimate_bending_capacity(\n",
     "    pphr_class=\"NDPR\", analysis_type=\"cpe_chk\", n_design=N_o_C * 1e3\n",
     ")\n",
     "print(\"Compression case capacity:-\")\n",
-    "print(f\"phi.Mn = {f_ult_res_C.m_x / 1e6:.2f} kN.m at axial load of {N_o_C:.2f} kN\")\n",
+    "print(f\"phi.Mn = {f_ult_res_c.m_x / 1e6:.2f} kN.m at axial load of {N_o_C:.2f} kN\")\n",
     "print(f\"Mo = {M_o_C} kN.m\")\n",
-    "col_ratio_C = M_o_C * 1e6 / f_ult_res_C.m_x\n",
-    "print(f\"Actual design ratio = {abs(col_ratio_C):.3f}\")"
+    "col_ratio_c = M_o_C * 1e6 / f_ult_res_c.m_x\n",
+    "print(f\"Actual design ratio = {abs(col_ratio_c):.3f}\")"
    ]
   },
   {
@@ -802,14 +798,12 @@
     "moment_curvature_results = conc_sec.moment_curvature_analysis(\n",
     "    theta=0, kappa_inc=2.5e-7, progress_bar=False\n",
     ")\n",
-    "print(\n",
-    "    f\"The failure material is:-\\n{moment_curvature_results.failure_geometry.material.name}\"\n",
-    ")\n",
+    "fail_mat = moment_curvature_results.failure_geometry.material.name\n",
+    "print(f\"The failure material is:-\\n{fail_mat}\")\n",
     "\n",
     "MomentCurvatureResults.plot_results(moment_curvature_results, fmt=\"-r\")\n",
-    "print(\n",
-    "    f\"Cracking moment is M_cr = {conc_sec.calculate_cracked_properties(theta=0).m_cr / 1e6:.2f} kNm\"\n",
-    ")"
+    "mcr = conc_sec.calculate_cracked_properties(theta=0).m_cr / 1e6\n",
+    "print(f\"Cracking moment is M_cr = {mcr:.2f} kNm\")"
    ]
   },
   {
@@ -993,7 +987,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.7"
   },
   "vscode": {
    "interpreter": {
