--- a/docs/examples/stress_analysis.ipynb
+++ b/docs/examples/stress_analysis.ipynb
@@ -282,7 +282,6 @@
     "from rich.console import Console\n",
     "from rich.table import Table\n",
     "\n",
-    "\n",
     "# store forces & moments for later\n",
     "forces = []\n",
     "moments_x = []\n",
@@ -309,10 +308,7 @@
     "    moments_x.append(moment_x)\n",
     "\n",
     "    # print compression or tension\n",
-    "    if strain > 0:\n",
-    "        t_or_c = \"C\"\n",
-    "    else:\n",
-    "        t_or_c = \"T\"\n",
+    "    t_or_c = \"C\" if strain > 0 else \"T\"\n",
     "\n",
     "    table.add_row(\n",
     "        f\"{idx + 1}\",\n",
@@ -554,7 +550,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.7"
   },
   "vscode": {
    "interpreter": {
