--- a/docs/examples/biaxial_bending.ipynb
+++ b/docs/examples/biaxial_bending.ipynb
@@ -211,12 +211,10 @@
    "outputs": [],
    "source": [
     "n_list = np.linspace(0, 7400e3, 5)\n",
-    "biaxial_results = []\n",
-    "\n",
-    "for n in n_list:\n",
-    "    biaxial_results.append(\n",
-    "        conc_sec.biaxial_bending_diagram(n=n, n_points=24, progress_bar=False)\n",
-    "    )"
+    "biaxial_results = [\n",
+    "    conc_sec.biaxial_bending_diagram(n=n, n_points=24, progress_bar=False)\n",
+    "    for n in n_list\n",
+    "]"
    ]
   },
   {
@@ -270,19 +268,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels = []\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "for bb_res in biaxial_results[::2]:\n",
-    "    labels.append(f\"N = {bb_res.n / 1e3:.0f} kN\")\n",
+    "labels = [f\"N = {bb_res.n / 1e3:.0f} kN\" for bb_rs in biaxial_results[::2]]\n",
     "\n",
     "ax = BiaxialBendingResults.plot_multiple_diagrams_2d(\n",
     "    biaxial_results[::2], fmt=\"-\", labels=labels, render=False\n",
     ")\n",
     "ax.set_xlabel(\"Bending Moment $M_x$ [kN.m]\")\n",
     "ax.set_ylabel(\"Bending Moment $M_y$ [kN.m]\")\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "\n",
     "plt.show()"
    ]
   }
@@ -303,7 +297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
