--- a/docs/examples/moment_curvature.ipynb
+++ b/docs/examples/moment_curvature.ipynb
@@ -326,9 +326,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\n",
-    "    f\"M_cr = {conc_sec.calculate_cracked_properties(theta=np.pi / 2).m_cr / 1e6:.2f} kN.m\"\n",
-    ")"
+    "m_cr = conc_sec.calculate_cracked_properties(theta=np.pi / 2).m_cr / 1e6\n",
+    "print(f\"M_cr = {m_cr:.2f} kN.m\")"
    ]
   },
   {
@@ -347,7 +346,6 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "\n",
     "\n",
     "fix, ax = plt.subplots()\n",
     "kappa = np.array(moment_curvature_results[-1].kappa)\n",
@@ -700,7 +698,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.7"
   },
   "vscode": {
    "interpreter": {
