--- a/docs/examples/ultimate_bending.ipynb
+++ b/docs/examples/ultimate_bending.ipynb
@@ -264,15 +264,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\n",
-    "    f\"M_x+ = {sag_axial_res.m_xy / 1e6:.2f} kN.m with N = {sag_axial_res.n / 1e3:.0f} kN\"\n",
-    ")\n",
-    "print(\n",
-    "    f\"M_x- = {hog_axial_res.m_xy / 1e6:.2f} kN.m with N = {hog_axial_res.n / 1e3:.0f} kN\"\n",
-    ")\n",
-    "print(\n",
-    "    f\"M_y = {weak_axial_res.m_xy / 1e6:.2f} kN.m with N = {weak_axial_res.n / 1e3:.0f} kN\"\n",
-    ")"
+    "msg_sag = f\"M_x+ = {sag_axial_res.m_xy / 1e6:.1f} kN.m \"\n",
+    "msg_sag += f\"with N = {sag_axial_res.n / 1e3:.0f} kN\"\n",
+    "msg_hog = f\"M_x- = {hog_axial_res.m_xy / 1e6:.1f} kN.m \"\n",
+    "msg_hog += f\"with N = {hog_axial_res.n / 1e3:.0f} kN\"\n",
+    "msg_weak = f\"M_y = {weak_axial_res.m_xy / 1e6:.1f} kN.m \"\n",
+    "msg_weak += f\"with N = {weak_axial_res.n / 1e3:.0f} kN\"\n",
+    "\n",
+    "print(msg_sag)\n",
+    "print(msg_hog)\n",
+    "print(msg_weak)"
    ]
   }
  ],
@@ -292,7 +293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.7"
   },
   "vscode": {
    "interpreter": {
