Add quantiphy, print_results() uses engineering notation

--- a/docs/examples/prestressed_section.ipynb
+++ b/docs/examples/prestressed_section.ipynb
@@ -270,7 +270,7 @@
    "source": [
     "gross_props_serv = conc_sec_serv.get_gross_properties()\n",
     "gross_props_ult = conc_sec_ult.get_gross_properties()\n",
-    "gross_props_serv.print_results(fmt=\".3e\")"
+    "gross_props_serv.print_results()"
    ]
   },
   {
@@ -376,7 +376,7 @@
    "source": [
     "cr_p_serv = conc_sec_serv.calculate_cracked_properties(m_ext=0)\n",
     "cr_p_ult = conc_sec_ult.calculate_cracked_properties(m_ext=0)\n",
-    "cr_p_serv.print_results(fmt=\".3e\")\n",
+    "cr_p_serv.print_results()\n",
     "cr_stress_p_serv = conc_sec_serv.calculate_cracked_stress(cracked_results=cr_p_serv)\n",
     "cr_stress_p_serv.plot_stress()"
    ]
