--- a/docs/examples/area_properties.ipynb
+++ b/docs/examples/area_properties.ipynb
@@ -132,7 +132,7 @@
    "outputs": [],
    "source": [
     "gross_props = conc_sec.get_gross_properties()\n",
-    "gross_props.print_results(fmt=\".3e\")"
+    "gross_props.print_results()"
    ]
   },
   {
@@ -153,7 +153,7 @@
    "outputs": [],
    "source": [
     "transformed_props = conc_sec.get_transformed_gross_properties(elastic_modulus=30.1e3)\n",
-    "transformed_props.print_results(fmt=\".3e\")"
+    "transformed_props.print_results()"
    ]
   }
  ],
