Fix post tests, add radians option and display custom scales in print_results

--- a/docs/examples/cracked_properties.ipynb
+++ b/docs/examples/cracked_properties.ipynb
@@ -153,8 +153,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cracked_res_sag.print_results()\n",
-    "cracked_res_hog.print_results()"
+    "cracked_res_sag.print_results(radians=False)\n",
+    "cracked_res_hog.print_results(radians=False)"
    ]
   },
   {
@@ -177,8 +177,8 @@
     "cracked_res_sag.calculate_transformed_properties(elastic_modulus=32.8e3)\n",
     "cracked_res_hog.calculate_transformed_properties(elastic_modulus=32.8e3)\n",
     "\n",
-    "cracked_res_sag.print_results()\n",
-    "cracked_res_hog.print_results()"
+    "cracked_res_sag.print_results(radians=False)\n",
+    "cracked_res_hog.print_results(radians=False)"
    ]
   },
   {
