--- a/docs/examples/prestressed_section.ipynb
+++ b/docs/examples/prestressed_section.ipynb
@@ -376,7 +376,7 @@
    "source": [
     "cr_p_serv = conc_sec_serv.calculate_cracked_properties(m_ext=0)\n",
     "cr_p_ult = conc_sec_ult.calculate_cracked_properties(m_ext=0)\n",
-    "cr_p_serv.print_results()\n",
+    "cr_p_serv.print_results(n_scale=1e-3, m_scale=1e-6)\n",
     "cr_stress_p_serv = conc_sec_serv.calculate_cracked_stress(cracked_results=cr_p_serv)\n",
     "cr_stress_p_serv.plot_stress()"
    ]
