Start formatting plots

--- a/docs/examples/biaxial_bending.ipynb
+++ b/docs/examples/biaxial_bending.ipynb
@@ -149,7 +149,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bb_res.plot_diagram()"
+    "bb_res.plot_diagram(\n",
+    "    eng=True,\n",
+    "    n_scale=1e-3,\n",
+    "    m_scale=1e-6,\n",
+    "    n_unit=\"kN\",\n",
+    "    m_unit=\"kN.m\",\n",
+    ")"
    ]
   },
   {
@@ -168,7 +174,13 @@
    "outputs": [],
    "source": [
     "bb_res = conc_sec.biaxial_bending_diagram(n=1000e3, n_points=24, progress_bar=False)\n",
-    "bb_res.plot_diagram()"
+    "bb_res.plot_diagram(\n",
+    "    eng=True,\n",
+    "    n_scale=1e-3,\n",
+    "    m_scale=1e-6,\n",
+    "    n_unit=\"kN\",\n",
+    "    m_unit=\"kN.m\",\n",
+    ")"
    ]
   },
   {
@@ -189,8 +201,8 @@
    "source": [
     "mi_x = conc_sec.moment_interaction_diagram(progress_bar=False)\n",
     "mi_y = conc_sec.moment_interaction_diagram(theta=np.pi / 2, progress_bar=False)\n",
-    "mi_x.plot_diagram()\n",
-    "mi_y.plot_diagram(moment=\"m_y\")\n",
+    "mi_x.plot_diagram(eng=True)\n",
+    "mi_y.plot_diagram(moment=\"m_y\", eng=True)\n",
     "print(f\"Decompression point for M_x is N = {mi_x.results[1].n / 1e3:.2f} kN\")\n",
     "print(f\"Decompression point for M_y is N = {mi_y.results[1].n / 1e3:.2f} kN\")"
    ]
@@ -232,7 +244,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "BiaxialBendingResults.plot_multiple_diagrams_3d(biaxial_results)"
+    "BiaxialBendingResults.plot_multiple_diagrams_3d(\n",
+    "    biaxial_results,\n",
+    "    eng=True,\n",
+    "    n_scale=1e-3,\n",
+    "    m_scale=1e-6,\n",
+    "    n_unit=\"kN\",\n",
+    "    m_unit=\"kN.m\",\n",
+    ")"
    ]
   },
   {
@@ -250,7 +269,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "BiaxialBendingResults.plot_multiple_diagrams_2d(biaxial_results, fmt=\"o-\")"
+    "BiaxialBendingResults.plot_multiple_diagrams_2d(\n",
+    "    biaxial_results,\n",
+    "    fmt=\"o-\",\n",
+    "    eng=True,\n",
+    "    n_scale=1e-3,\n",
+    "    m_scale=1e-6,\n",
+    "    n_unit=\"kN\",\n",
+    "    m_unit=\"kN.m\",\n",
+    ")"
    ]
   },
   {
@@ -268,17 +295,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "labels = [f\"N = {bb_res.n / 1e3:.0f} kN\" for bb_rs in biaxial_results[::2]]\n",
+    "labels = [f\"N = {bb_res.n / 1e3:.0f} kN\" for bb_res in biaxial_results[::2]]\n",
     "\n",
     "ax = BiaxialBendingResults.plot_multiple_diagrams_2d(\n",
-    "    biaxial_results[::2], fmt=\"-\", labels=labels, render=False\n",
-    ")\n",
-    "ax.set_xlabel(\"Bending Moment $M_x$ [kN.m]\")\n",
-    "ax.set_ylabel(\"Bending Moment $M_y$ [kN.m]\")\n",
-    "plt.show()"
+    "    biaxial_results[::2],\n",
+    "    fmt=\"-\",\n",
+    "    labels=labels,\n",
+    "    m_scale=1e-6,\n",
+    "    m_unit=\"kN.m\",\n",
+    ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
