--- a/docs/examples/moment_interaction.ipynb
+++ b/docs/examples/moment_interaction.ipynb
@@ -148,7 +148,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mi_res.plot_diagram()"
+    "mi_res.plot_diagram(eng=True, n_unit=\"N\", m_unit=\"N.mm\")"
    ]
   },
   {
@@ -167,7 +167,13 @@
    "outputs": [],
    "source": [
     "mi_res = conc_sec.moment_interaction_diagram(theta=np.pi / 2, progress_bar=False)\n",
-    "mi_res.plot_diagram(moment=\"m_y\")"
+    "mi_res.plot_diagram(\n",
+    "    moment=\"m_y\",\n",
+    "    n_scale=1e-3,\n",
+    "    m_scale=1e-6,\n",
+    "    n_unit=\"kN\",\n",
+    "    m_unit=\"kN.m\",\n",
+    ")"
    ]
   },
   {
@@ -222,7 +228,13 @@
    "source": [
     "# plot all the diagrams on one image\n",
     "MomentInteractionResults.plot_multiple_diagrams(\n",
-    "    moment_interaction_results=mi_results, labels=labels, fmt=\"-\"\n",
+    "    moment_interaction_results=mi_results,\n",
+    "    labels=labels,\n",
+    "    fmt=\"-\",\n",
+    "    n_scale=1e-3,\n",
+    "    m_scale=1e-6,\n",
+    "    n_unit=\"kN\",\n",
+    "    m_unit=\"kN.m\",\n",
     ")"
    ]
   },
@@ -265,6 +277,9 @@
     "    moment_interaction_results=[mi_res_pos, mi_res_neg],\n",
     "    labels=[\"Positive\", \"Negative\"],\n",
     "    fmt=\"-\",\n",
+    "    eng=True,\n",
+    "    n_unit=\"N\",\n",
+    "    m_unit=\"N.mm\",\n",
     ")"
    ]
   },
@@ -380,7 +395,16 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "ax = mi_res.plot_diagram(fmt=\"-kx\", labels=True, label_offset=True, render=False)\n",
+    "ax = mi_res.plot_diagram(\n",
+    "    fmt=\"-kx\",\n",
+    "    labels=True,\n",
+    "    label_offset=True,\n",
+    "    n_scale=1e-3,\n",
+    "    m_scale=1e-6,\n",
+    "    n_unit=\"kN\",\n",
+    "    m_unit=\"kN.m\",\n",
+    "    render=False,\n",
+    ")\n",
     "\n",
     "# reset axis limits to ensure labels are within plot\n",
     "ax.set_xlim(-20, 850)\n",
