--- a/docs/examples/moment_curvature.ipynb
+++ b/docs/examples/moment_curvature.ipynb
@@ -256,7 +256,12 @@
    "outputs": [],
    "source": [
     "MomentCurvatureResults.plot_multiple_results(\n",
-    "    moment_curvature_results=moment_curvature_results, labels=labels, fmt=\"-\"\n",
+    "    moment_curvature_results=moment_curvature_results,\n",
+    "    labels=labels,\n",
+    "    fmt=\"-\",\n",
+    "    eng=True,\n",
+    "    m_scale=1e-6,\n",
+    "    m_unit=\"kN.m\",\n",
     ")"
    ]
   },
@@ -294,7 +299,12 @@
    "outputs": [],
    "source": [
     "MomentCurvatureResults.plot_multiple_results(\n",
-    "    moment_curvature_results=moment_curvature_results[1:], labels=labels[1:], fmt=\"-\"\n",
+    "    moment_curvature_results=moment_curvature_results[1:],\n",
+    "    labels=labels[1:],\n",
+    "    fmt=\"-\",\n",
+    "    eng=True,\n",
+    "    m_scale=1e-6,\n",
+    "    m_unit=\"kN.m\",\n",
     ")"
    ]
   },
@@ -440,7 +450,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res1.plot_results(fmt=\"x-\")\n",
+    "res1.plot_results()\n",
     "print(f\"Number of calculations = {len(res1.kappa)}\")\n",
     "print(f\"Failure curvature = {res1.kappa[-1]:.4e}\")"
    ]
@@ -479,7 +489,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res2.plot_results(fmt=\"x-\")\n",
+    "res2.plot_results()\n",
     "print(f\"Number of calculations = {len(res2.kappa)}\")\n",
     "print(f\"Failure curvature = {res2.kappa[-1]:.4e}\")"
    ]
@@ -529,7 +539,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res3.plot_results(fmt=\"x-\")\n",
+    "res3.plot_results()\n",
     "print(f\"Number of calculations = {len(res3.kappa)}\")\n",
     "print(f\"Failure curvature = {res3.kappa[-1]:.4e}\")"
    ]
@@ -670,6 +680,9 @@
     "    moment_curvature_results=[res_n0, res_n1, res_nt],\n",
     "    labels=[\"$N=0$ kN\", \"$N=0.2f'cA_g$\", \"$N=-1000$ kN\"],\n",
     "    fmt=\"-\",\n",
+    "    eng=True,\n",
+    "    m_scale=1e-6,\n",
+    "    m_unit=\"kN.m\",\n",
     ")"
    ]
   },
