Implement UnitDisplay, add to tests and plots

--- a/docs/examples/composite_section.ipynb
+++ b/docs/examples/composite_section.ipynb
@@ -42,7 +42,8 @@
     "    SteelElasticPlastic,\n",
     "    add_bar_circular_array,\n",
     "    add_bar_rectangular_array,\n",
-    ")"
+    ")\n",
+    "from concreteproperties.post import si_kn_m, si_n_mm"
    ]
   },
   {
@@ -170,7 +171,7 @@
    "outputs": [],
    "source": [
     "el_stress = conc_sec.calculate_uncracked_stress(m_x=100e6)\n",
-    "el_stress.plot_stress()"
+    "el_stress.plot_stress(units=si_n_mm)"
    ]
   },
   {
@@ -191,7 +192,7 @@
    "source": [
     "cr_res = conc_sec.calculate_cracked_properties()\n",
     "cr_stress = conc_sec.calculate_cracked_stress(cracked_results=cr_res, m=500e6)\n",
-    "cr_stress.plot_stress()"
+    "cr_stress.plot_stress(units=si_n_mm)"
    ]
   },
   {
@@ -220,7 +221,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mk_res.plot_results(fmt=\"kx-\")"
+    "mk_res.plot_results(fmt=\"kx-\", eng=True, units=si_kn_m)"
    ]
   },
   {
@@ -237,7 +238,7 @@
     "serv_stress = conc_sec.calculate_service_stress(\n",
     "    moment_curvature_results=mk_res, m=None, kappa=2e-5\n",
     ")\n",
-    "serv_stress.plot_stress()"
+    "serv_stress.plot_stress(units=si_n_mm)"
    ]
   },
   {
@@ -258,8 +259,8 @@
    "source": [
     "ult_res_x = conc_sec.ultimate_bending_capacity()\n",
     "ult_res_y = conc_sec.ultimate_bending_capacity(theta=np.pi / 2)\n",
-    "ult_res_x.print_results()\n",
-    "ult_res_y.print_results()"
+    "ult_res_x.print_results(units=si_kn_m)\n",
+    "ult_res_y.print_results(units=si_kn_m)"
    ]
   },
   {
@@ -270,7 +271,7 @@
    "outputs": [],
    "source": [
     "mi_res = conc_sec.moment_interaction_diagram(progress_bar=False)\n",
-    "mi_res.plot_diagram()"
+    "mi_res.plot_diagram(units=si_kn_m)"
    ]
   },
   {
@@ -281,7 +282,7 @@
    "outputs": [],
    "source": [
     "bb_res = conc_sec.biaxial_bending_diagram(n_points=24, progress_bar=False)\n",
-    "bb_res.plot_diagram()"
+    "bb_res.plot_diagram(units=si_kn_m)"
    ]
   },
   {
@@ -293,8 +294,8 @@
    "source": [
     "ult_stress_x = conc_sec.calculate_ultimate_stress(ult_res_x)\n",
     "ult_stress_y = conc_sec.calculate_ultimate_stress(ult_res_y)\n",
-    "ult_stress_x.plot_stress()\n",
-    "ult_stress_y.plot_stress()"
+    "ult_stress_x.plot_stress(units=si_n_mm)\n",
+    "ult_stress_y.plot_stress(units=si_n_mm)"
    ]
   },
   {
@@ -400,8 +401,8 @@
    "source": [
     "el_stress_comp = conc_sec_comp.calculate_uncracked_stress(m_x=10e6)\n",
     "el_stress_conc = conc_sec_conc.calculate_uncracked_stress(m_x=10e6)\n",
-    "el_stress_comp.plot_stress()\n",
-    "el_stress_conc.plot_stress()"
+    "el_stress_comp.plot_stress(units=si_n_mm)\n",
+    "el_stress_conc.plot_stress(units=si_n_mm)"
    ]
   },
   {
@@ -428,8 +429,8 @@
     "cr_stress_conc = conc_sec_conc.calculate_cracked_stress(\n",
     "    cracked_results=cr_res_conc, m=50e6\n",
     ")\n",
-    "cr_stress_comp.plot_stress()\n",
-    "cr_stress_conc.plot_stress()"
+    "cr_stress_comp.plot_stress(units=si_n_mm)\n",
+    "cr_stress_conc.plot_stress(units=si_n_mm)"
    ]
   },
   {
@@ -467,6 +468,8 @@
     "    moment_curvature_results=[mk_res_comp, mk_res_conc],\n",
     "    labels=[\"Composite\", \"Concrete\"],\n",
     "    fmt=\"x-\",\n",
+    "    eng=True,\n",
+    "    units=si_kn_m,\n",
     ")"
    ]
   },
@@ -500,6 +503,7 @@
     "    moment_interaction_results=[mi_res_comp, mi_res_conc],\n",
     "    labels=[\"Composite\", \"Concrete\"],\n",
     "    fmt=\"x-\",\n",
+    "    units=si_kn_m,\n",
     ")"
    ]
   },
@@ -632,7 +636,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mk_res.plot_results()"
+    "mk_res.plot_results(eng=True, units=si_kn_m)"
    ]
   },
   {
@@ -666,9 +670,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "el_stress.plot_stress()\n",
-    "yield_stress.plot_stress()\n",
-    "ult_stress.plot_stress()"
+    "el_stress.plot_stress(units=si_n_mm)\n",
+    "yield_stress.plot_stress(units=si_n_mm)\n",
+    "ult_stress.plot_stress(units=si_n_mm)"
    ]
   },
   {
@@ -687,8 +691,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ult_res = conc_sec.ultimate_bending_capacity(theta=np.pi / 2)\n",
-    "ult_res.print_results()"
+    "ult_res = conc_sec.ultimate_bending_capacity()\n",
+    "ult_res.print_results(units=si_kn_m)"
    ]
   },
   {
