--- a/docs/examples/cracked_properties.ipynb
+++ b/docs/examples/cracked_properties.ipynb
@@ -153,8 +153,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cracked_res_sag.print_results(radians=False)\n",
-    "cracked_res_hog.print_results(radians=False)"
+    "cracked_res_sag.print_results()\n",
+    "cracked_res_hog.print_results()"
    ]
   },
   {
@@ -174,11 +174,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from concreteproperties.post import si_kn_m, si_n_mm\n",
+    "\n",
+    "si_n_mm.radians = False  # show degrees\n",
+    "\n",
     "cracked_res_sag.calculate_transformed_properties(elastic_modulus=32.8e3)\n",
     "cracked_res_hog.calculate_transformed_properties(elastic_modulus=32.8e3)\n",
     "\n",
-    "cracked_res_sag.print_results(radians=False)\n",
-    "cracked_res_hog.print_results(radians=False)"
+    "cracked_res_sag.print_results(units=si_kn_m)\n",
+    "cracked_res_hog.print_results(units=si_n_mm)"
    ]
   },
   {
