--- a/docs/examples/moment_curvature.ipynb
+++ b/docs/examples/moment_curvature.ipynb
@@ -33,6 +33,7 @@
     "    SteelBar,\n",
     "    add_bar_rectangular_array,\n",
     ")\n",
+    "from concreteproperties.post import si_kn_m\n",
     "from concreteproperties.results import MomentCurvatureResults"
    ]
   },
@@ -260,8 +261,7 @@
     "    labels=labels,\n",
     "    fmt=\"-\",\n",
     "    eng=True,\n",
-    "    m_scale=1e-6,\n",
-    "    m_unit=\"kN.m\",\n",
+    "    units=si_kn_m,\n",
     ")"
    ]
   },
@@ -303,8 +303,7 @@
     "    labels=labels[1:],\n",
     "    fmt=\"-\",\n",
     "    eng=True,\n",
-    "    m_scale=1e-6,\n",
-    "    m_unit=\"kN.m\",\n",
+    "    units=si_kn_m,\n",
     ")"
    ]
   },
@@ -681,8 +680,7 @@
     "    labels=[\"$N=0$ kN\", \"$N=0.2f'cA_g$\", \"$N=-1000$ kN\"],\n",
     "    fmt=\"-\",\n",
     "    eng=True,\n",
-    "    m_scale=1e-6,\n",
-    "    m_unit=\"kN.m\",\n",
+    "    units=si_kn_m,\n",
     ")"
    ]
   },
