--- a/docs/examples/moment_interaction.ipynb
+++ b/docs/examples/moment_interaction.ipynb
@@ -34,6 +34,7 @@
     "    SteelBar,\n",
     "    SteelElasticPlastic,\n",
     ")\n",
+    "from concreteproperties.post import si_kn_m, si_n_mm\n",
     "from concreteproperties.results import MomentInteractionResults"
    ]
   },
@@ -148,7 +149,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mi_res.plot_diagram(eng=True, n_unit=\"N\", m_unit=\"N.mm\")"
+    "mi_res.plot_diagram(eng=True, units=si_n_mm)"
    ]
   },
   {
@@ -167,13 +168,7 @@
    "outputs": [],
    "source": [
     "mi_res = conc_sec.moment_interaction_diagram(theta=np.pi / 2, progress_bar=False)\n",
-    "mi_res.plot_diagram(\n",
-    "    moment=\"m_y\",\n",
-    "    n_scale=1e-3,\n",
-    "    m_scale=1e-6,\n",
-    "    n_unit=\"kN\",\n",
-    "    m_unit=\"kN.m\",\n",
-    ")"
+    "mi_res.plot_diagram(moment=\"m_y\", units=si_kn_m)"
    ]
   },
   {
@@ -231,10 +226,7 @@
     "    moment_interaction_results=mi_results,\n",
     "    labels=labels,\n",
     "    fmt=\"-\",\n",
-    "    n_scale=1e-3,\n",
-    "    m_scale=1e-6,\n",
-    "    n_unit=\"kN\",\n",
-    "    m_unit=\"kN.m\",\n",
+    "    units=si_kn_m,\n",
     ")"
    ]
   },
@@ -278,8 +270,7 @@
     "    labels=[\"Positive\", \"Negative\"],\n",
     "    fmt=\"-\",\n",
     "    eng=True,\n",
-    "    n_unit=\"N\",\n",
-    "    m_unit=\"N.mm\",\n",
+    "    units=si_n_mm,\n",
     ")"
    ]
   },
@@ -399,10 +390,7 @@
     "    fmt=\"-kx\",\n",
     "    labels=True,\n",
     "    label_offset=True,\n",
-    "    n_scale=1e-3,\n",
-    "    m_scale=1e-6,\n",
-    "    n_unit=\"kN\",\n",
-    "    m_unit=\"kN.m\",\n",
+    "    units=si_kn_m,\n",
     "    render=False,\n",
     ")\n",
     "\n",
