--- a/docs/examples/stress_analysis.ipynb
+++ b/docs/examples/stress_analysis.ipynb
@@ -34,7 +34,8 @@
     "    RectangularStressBlock,\n",
     "    SteelBar,\n",
     "    SteelElasticPlastic,\n",
-    ")"
+    ")\n",
+    "from concreteproperties.post import si_kn_m, si_n_mm"
    ]
   },
   {
@@ -157,7 +158,7 @@
    },
    "outputs": [],
    "source": [
-    "uncr_stress_res_1.plot_stress()"
+    "uncr_stress_res_1.plot_stress(units=si_n_mm)"
    ]
   },
   {
@@ -167,7 +168,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "uncr_stress_res_2.plot_stress()"
+    "uncr_stress_res_2.plot_stress(eng=True, units=si_kn_m)"
    ]
   },
   {
@@ -382,7 +383,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mk_res.plot_results()"
+    "mk_res.plot_results(eng=True, units=si_kn_m)"
    ]
   },
   {
@@ -436,7 +437,7 @@
     "\n",
     "    # create plot title and plot stress\n",
     "    label = f\"Moment = {m_stress / 1e6:.0f} kN.m\"\n",
-    "    service_stress_res.plot_stress(title=label)"
+    "    service_stress_res.plot_stress(title=label, units=si_n_mm)"
    ]
   },
   {
@@ -464,7 +465,7 @@
    "outputs": [],
    "source": [
     "mi_res = conc_sec.moment_interaction_diagram(progress_bar=False)\n",
-    "mi_res.plot_diagram()"
+    "mi_res.plot_diagram(units=si_kn_m)"
    ]
   },
   {
@@ -520,9 +521,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ultimate_stress_pure.plot_stress(title=\"Pure Bending\")\n",
-    "ultimate_stress_bal.plot_stress(title=\"Balanced\")\n",
-    "ultimate_stress_decomp.plot_stress(title=\"Decompression\")"
+    "ultimate_stress_pure.plot_stress(title=\"Pure Bending\", units=si_n_mm)\n",
+    "ultimate_stress_bal.plot_stress(title=\"Balanced\", units=si_n_mm)\n",
+    "ultimate_stress_decomp.plot_stress(title=\"Decompression\", units=si_n_mm)"
    ]
   },
   {
