--- a/docs/examples/ultimate_bending.ipynb
+++ b/docs/examples/ultimate_bending.ipynb
@@ -32,7 +32,8 @@
     "    ConcreteSection,\n",
     "    SteelBar,\n",
     "    add_bar_rectangular_array,\n",
-    ")"
+    ")\n",
+    "from concreteproperties.post import si_kn_m, si_n_mm"
    ]
   },
   {
@@ -184,7 +185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sag_res.print_results()"
+    "sag_res.print_results(units=si_kn_m)"
    ]
   },
   {
@@ -194,7 +195,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hog_res.print_results()"
+    "si_n_mm.radians = False  # display angles in degrees\n",
+    "hog_res.print_results(units=si_n_mm)"
    ]
   },
   {
