--- a/docs/examples/biaxial_bending.ipynb
+++ b/docs/examples/biaxial_bending.ipynb
@@ -35,6 +35,7 @@
     "    SteelElasticPlastic,\n",
     "    add_bar_rectangular_array,\n",
     ")\n",
+    "from concreteproperties.post import si_kn_m\n",
     "from concreteproperties.results import BiaxialBendingResults"
    ]
   },
@@ -149,13 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bb_res.plot_diagram(\n",
-    "    eng=True,\n",
-    "    n_scale=1e-3,\n",
-    "    m_scale=1e-6,\n",
-    "    n_unit=\"kN\",\n",
-    "    m_unit=\"kN.m\",\n",
-    ")"
+    "bb_res.plot_diagram(eng=True, units=si_kn_m)"
    ]
   },
   {
@@ -174,13 +169,7 @@
    "outputs": [],
    "source": [
     "bb_res = conc_sec.biaxial_bending_diagram(n=1000e3, n_points=24, progress_bar=False)\n",
-    "bb_res.plot_diagram(\n",
-    "    eng=True,\n",
-    "    n_scale=1e-3,\n",
-    "    m_scale=1e-6,\n",
-    "    n_unit=\"kN\",\n",
-    "    m_unit=\"kN.m\",\n",
-    ")"
+    "bb_res.plot_diagram(eng=True, units=si_kn_m)"
    ]
   },
   {
@@ -247,10 +236,7 @@
     "BiaxialBendingResults.plot_multiple_diagrams_3d(\n",
     "    biaxial_results,\n",
     "    eng=True,\n",
-    "    n_scale=1e-3,\n",
-    "    m_scale=1e-6,\n",
-    "    n_unit=\"kN\",\n",
-    "    m_unit=\"kN.m\",\n",
+    "    units=si_kn_m,\n",
     ")"
    ]
   },
@@ -273,10 +259,7 @@
     "    biaxial_results,\n",
     "    fmt=\"o-\",\n",
     "    eng=True,\n",
-    "    n_scale=1e-3,\n",
-    "    m_scale=1e-6,\n",
-    "    n_unit=\"kN\",\n",
-    "    m_unit=\"kN.m\",\n",
+    "    units=si_kn_m,\n",
     ")"
    ]
   },
@@ -301,18 +284,9 @@
     "    biaxial_results[::2],\n",
     "    fmt=\"-\",\n",
     "    labels=labels,\n",
-    "    m_scale=1e-6,\n",
-    "    m_unit=\"kN.m\",\n",
+    "    units=si_kn_m,\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "23",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
