--- a/docs/examples/prestressed_section.ipynb
+++ b/docs/examples/prestressed_section.ipynb
@@ -37,6 +37,7 @@
     "    StrandHardening,\n",
     "    add_bar_rectangular_array,\n",
     ")\n",
+    "from concreteproperties.post import si_kn_m, si_n_mm\n",
     "from concreteproperties.results import MomentCurvatureResults"
    ]
   },
@@ -270,7 +271,7 @@
    "source": [
     "gross_props_serv = conc_sec_serv.get_gross_properties()\n",
     "gross_props_ult = conc_sec_ult.get_gross_properties()\n",
-    "gross_props_serv.print_results()"
+    "gross_props_serv.print_results(units=si_n_mm)"
    ]
   },
   {
@@ -356,7 +357,7 @@
    "source": [
     "# stress due to prestressing only\n",
     "uncr_stress_p = conc_sec_serv.calculate_uncracked_stress()\n",
-    "uncr_stress_p.plot_stress()"
+    "uncr_stress_p.plot_stress(units=si_n_mm)"
    ]
   },
   {
@@ -376,9 +377,9 @@
    "source": [
     "cr_p_serv = conc_sec_serv.calculate_cracked_properties(m_ext=0)\n",
     "cr_p_ult = conc_sec_ult.calculate_cracked_properties(m_ext=0)\n",
-    "cr_p_serv.print_results(n_scale=1e-3, m_scale=1e-6)\n",
+    "cr_p_serv.print_results(units=si_kn_m)\n",
     "cr_stress_p_serv = conc_sec_serv.calculate_cracked_stress(cracked_results=cr_p_serv)\n",
-    "cr_stress_p_serv.plot_stress()"
+    "cr_stress_p_serv.plot_stress(units=si_n_mm)"
    ]
   },
   {
@@ -422,7 +423,7 @@
    "source": [
     "# stress due to G_sw + P at t = 0\n",
     "uncr_stress_t0 = conc_sec_serv.calculate_uncracked_stress(m=m_g_sw)\n",
-    "uncr_stress_t0.plot_stress()"
+    "uncr_stress_t0.plot_stress(units=si_n_mm)"
    ]
   },
   {
@@ -443,7 +444,7 @@
    "source": [
     "# stress due to G + Q + P at t = inf\n",
     "uncr_stress_tinf = conc_sec_ult.calculate_uncracked_stress(m=m_g_sw + m_g_si + m_q)\n",
-    "uncr_stress_tinf.plot_stress()"
+    "uncr_stress_tinf.plot_stress(units=si_n_mm)"
    ]
   },
   {
@@ -471,7 +472,7 @@
    "outputs": [],
    "source": [
     "ult_res = conc_sec_ult.ultimate_bending_capacity()\n",
-    "ult_res.print_results()"
+    "ult_res.print_results(units=si_kn_m)"
    ]
   },
   {
@@ -503,7 +504,7 @@
    "outputs": [],
    "source": [
     "ult_stress = conc_sec_ult.calculate_ultimate_stress(ultimate_results=ult_res)\n",
-    "ult_stress.plot_stress()"
+    "ult_stress.plot_stress(units=si_n_mm)"
    ]
   },
   {
@@ -550,6 +551,8 @@
     "    moment_curvature_results=[mk_serv, mk_ult],\n",
     "    labels=[\"Service\", \"Ultimate\"],\n",
     "    fmt=\"-\",\n",
+    "    eng=True,\n",
+    "    units=si_kn_m,\n",
     ")"
    ]
   },
@@ -575,8 +578,8 @@
     "serv_stress_u_1 = conc_sec_ult.calculate_service_stress(\n",
     "    moment_curvature_results=mk_ult, m=None, kappa=mk_ult.kappa[0]\n",
     ")\n",
-    "serv_stress_s_1.plot_stress()\n",
-    "serv_stress_u_1.plot_stress()"
+    "serv_stress_s_1.plot_stress(units=si_n_mm)\n",
+    "serv_stress_u_1.plot_stress(units=si_n_mm)"
    ]
   },
   {
@@ -633,8 +636,8 @@
     "serv_stress_u_2 = conc_sec_ult.calculate_service_stress(\n",
     "    moment_curvature_results=mk_ult, m=8000e6\n",
     ")\n",
-    "serv_stress_s_2.plot_stress()\n",
-    "serv_stress_u_2.plot_stress()"
+    "serv_stress_s_2.plot_stress(units=si_n_mm)\n",
+    "serv_stress_u_2.plot_stress(units=si_n_mm)"
    ]
   }
  ],
@@ -654,7 +657,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.7"
   },
   "vscode": {
    "interpreter": {
