Apply formatting to stress-strain plots

--- a/docs/examples/moment_curvature.ipynb
+++ b/docs/examples/moment_curvature.ipynb
@@ -33,7 +33,7 @@
     "    SteelBar,\n",
     "    add_bar_rectangular_array,\n",
     ")\n",
-    "from concreteproperties.post import si_kn_m\n",
+    "from concreteproperties.post import si_kn_m, si_n_mm\n",
     "from concreteproperties.results import MomentCurvatureResults"
    ]
   },
@@ -141,7 +141,9 @@
    "outputs": [],
    "source": [
     "for conc in conc_material_list:\n",
-    "    conc.stress_strain_profile.plot_stress_strain(title=conc.name)"
+    "    conc.stress_strain_profile.plot_stress_strain(\n",
+    "        title=conc.name, eng=True, units=si_n_mm\n",
+    "    )"
    ]
   },
   {
@@ -151,7 +153,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "steel.stress_strain_profile.plot_stress_strain(title=steel.name)"
+    "steel.stress_strain_profile.plot_stress_strain(\n",
+    "    title=steel.name, eng=True, units=si_n_mm\n",
+    ")"
    ]
   },
   {
