--- a/docs/examples/prestressed_section.ipynb
+++ b/docs/examples/prestressed_section.ipynb
@@ -141,8 +141,10 @@
    "outputs": [],
    "source": [
     "# combine both stress-strain profiles on the same plot\n",
-    "ax = concrete_service.stress_strain_profile.plot_stress_strain(render=False)\n",
-    "concrete_service.ultimate_stress_strain_profile.plot_stress_strain(ax=ax)\n",
+    "ax = concrete_service.stress_strain_profile.plot_stress_strain(\n",
+    "    units=si_n_mm, render=False\n",
+    ")\n",
+    "concrete_service.ultimate_stress_strain_profile.plot_stress_strain(units=si_n_mm, ax=ax)\n",
     "ax.lines[0].set_label(\"Service\")\n",
     "ax.lines[1].set_label(\"Ultimate\")\n",
     "ax.legend(loc=\"center left\", bbox_to_anchor=(1, 0.5))\n",
@@ -158,8 +160,10 @@
    "outputs": [],
    "source": [
     "# combine both stress-strain profiles on the same plot\n",
-    "ax = strand_service.stress_strain_profile.plot_stress_strain(render=False)\n",
-    "strand_ultimate.stress_strain_profile.plot_stress_strain(ax=ax)\n",
+    "ax = strand_service.stress_strain_profile.plot_stress_strain(\n",
+    "    eng=True, units=si_kn_m, render=False\n",
+    ")\n",
+    "strand_ultimate.stress_strain_profile.plot_stress_strain(eng=True, units=si_kn_m, ax=ax)\n",
     "ax.lines[0].set_label(\"Service\")\n",
     "ax.lines[1].set_label(\"Ultimate\")\n",
     "ax.legend(loc=\"center left\", bbox_to_anchor=(1, 0.5))\n",
